[gd_scene load_steps=77 format=1]

[ext_resource path="res://scripts/scene_changer/scene_console.gd" type="Script" id=1]
[ext_resource path="res://sprites/contact_loading/contact_loading_00000.png" type="Texture" id=2]
[ext_resource path="res://sprites/contact_loading/contact_loading_00001.png" type="Texture" id=3]
[ext_resource path="res://sprites/contact_loading/contact_loading_00002.png" type="Texture" id=4]
[ext_resource path="res://sprites/contact_loading/contact_loading_00003.png" type="Texture" id=5]
[ext_resource path="res://sprites/contact_loading/contact_loading_00004.png" type="Texture" id=6]
[ext_resource path="res://sprites/contact_loading/contact_loading_00005.png" type="Texture" id=7]
[ext_resource path="res://sprites/contact_loading/contact_loading_00006.png" type="Texture" id=8]
[ext_resource path="res://sprites/contact_loading/contact_loading_00007.png" type="Texture" id=9]
[ext_resource path="res://sprites/contact_loading/contact_loading_00008.png" type="Texture" id=10]
[ext_resource path="res://sprites/contact_loading/contact_loading_00009.png" type="Texture" id=11]
[ext_resource path="res://sprites/contact_loading/contact_loading_00010.png" type="Texture" id=12]
[ext_resource path="res://sprites/contact_loading/contact_loading_00011.png" type="Texture" id=13]
[ext_resource path="res://sprites/contact_loading/contact_loading_00012.png" type="Texture" id=14]
[ext_resource path="res://sprites/contact_loading/contact_loading_00013.png" type="Texture" id=15]
[ext_resource path="res://sprites/contact_loading/contact_loading_00014.png" type="Texture" id=16]
[ext_resource path="res://sprites/contact_loading/contact_loading_00015.png" type="Texture" id=17]
[ext_resource path="res://sprites/contact_loading/contact_loading_00016.png" type="Texture" id=18]
[ext_resource path="res://sprites/contact_loading/contact_loading_00017.png" type="Texture" id=19]
[ext_resource path="res://sprites/contact_loading/contact_loading_00018.png" type="Texture" id=20]
[ext_resource path="res://sprites/contact_loading/contact_loading_00019.png" type="Texture" id=21]
[ext_resource path="res://sprites/contact_loading/contact_loading_00020.png" type="Texture" id=22]
[ext_resource path="res://sprites/contact_loading/contact_loading_00021.png" type="Texture" id=23]
[ext_resource path="res://sprites/contact_loading/contact_loading_00022.png" type="Texture" id=24]
[ext_resource path="res://sprites/contact_loading/contact_loading_00023.png" type="Texture" id=25]
[ext_resource path="res://sprites/contact_loading/contact_loading_00024.png" type="Texture" id=26]
[ext_resource path="res://sprites/contact_loading/contact_loading_00025.png" type="Texture" id=27]
[ext_resource path="res://sprites/contact_loading/contact_loading_00026.png" type="Texture" id=28]
[ext_resource path="res://sprites/contact_loading/contact_loading_00027.png" type="Texture" id=29]
[ext_resource path="res://sprites/contact_loading/contact_loading_00028.png" type="Texture" id=30]
[ext_resource path="res://sprites/contact_loading/contact_loading_00029.png" type="Texture" id=31]
[ext_resource path="res://sprites/contact_loading/contact_loading_00030.png" type="Texture" id=32]
[ext_resource path="res://sprites/contact_loading/contact_loading_00031.png" type="Texture" id=33]
[ext_resource path="res://sprites/contact_loading/contact_loading_00032.png" type="Texture" id=34]
[ext_resource path="res://sprites/contact_loading/contact_loading_00033.png" type="Texture" id=35]
[ext_resource path="res://sprites/contact_loading/contact_loading_00034.png" type="Texture" id=36]
[ext_resource path="res://sprites/contact_loading/contact_loading_00035.png" type="Texture" id=37]
[ext_resource path="res://sprites/contact_loading/contact_loading_00036.png" type="Texture" id=38]
[ext_resource path="res://sprites/contact_loading/contact_loading_00037.png" type="Texture" id=39]
[ext_resource path="res://sprites/contact_loading/contact_loading_00038.png" type="Texture" id=40]
[ext_resource path="res://sprites/contact_loading/contact_loading_00039.png" type="Texture" id=41]
[ext_resource path="res://sprites/contact_loading/contact_loading_00040.png" type="Texture" id=42]
[ext_resource path="res://sprites/contact_loading/contact_loading_00041.png" type="Texture" id=43]
[ext_resource path="res://sprites/contact_loading/contact_loading_00042.png" type="Texture" id=44]
[ext_resource path="res://sprites/contact_loading/contact_loading_00043.png" type="Texture" id=45]
[ext_resource path="res://sprites/contact_loading/contact_loading_00044.png" type="Texture" id=46]
[ext_resource path="res://sprites/contact_loading/contact_loading_00045.png" type="Texture" id=47]
[ext_resource path="res://sprites/contact_loading/contact_loading_00046.png" type="Texture" id=48]
[ext_resource path="res://sprites/contact_loading/contact_loading_00047.png" type="Texture" id=49]
[ext_resource path="res://sprites/contact_loading/contact_loading_00048.png" type="Texture" id=50]
[ext_resource path="res://sprites/contact_loading/contact_loading_00049.png" type="Texture" id=51]
[ext_resource path="res://sprites/contact1.png" type="Texture" id=52]
[ext_resource path="res://sprites/contact2.png" type="Texture" id=53]
[ext_resource path="res://sprites/contact3.png" type="Texture" id=54]
[ext_resource path="res://sprites/contact/contact_00000.png" type="Texture" id=55]
[ext_resource path="res://sprites/contact/contact_00001.png" type="Texture" id=56]
[ext_resource path="res://sprites/contact/contact_00002.png" type="Texture" id=57]
[ext_resource path="res://sprites/contact/contact_00003.png" type="Texture" id=58]
[ext_resource path="res://sprites/contact/contact_00004.png" type="Texture" id=59]
[ext_resource path="res://sprites/contact/contact_00005.png" type="Texture" id=60]
[ext_resource path="res://sprites/contact/contact_00006.png" type="Texture" id=61]
[ext_resource path="res://sprites/contact/contact_00007.png" type="Texture" id=62]
[ext_resource path="res://sprites/contact/contact_00008.png" type="Texture" id=63]
[ext_resource path="res://sprites/contact/contact_00009.png" type="Texture" id=64]
[ext_resource path="res://sprites/contact/contact_00010.png" type="Texture" id=65]
[ext_resource path="res://sprites/contact/contact_00011.png" type="Texture" id=66]
[ext_resource path="res://sprites/contact/contact_00012.png" type="Texture" id=67]
[ext_resource path="res://sprites/contact/contact_00013.png" type="Texture" id=68]
[ext_resource path="res://sprites/contact/contact_00014.png" type="Texture" id=69]
[ext_resource path="res://sound/sfx/contact.wav" type="Sample" id=70]
[ext_resource path="res://sound/sfx/contact_done2.wav" type="Sample" id=71]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 53.6652, 52.027 )

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ) ], "loop":false, "name":"contact_loading", "speed":30.0 } ]

[sub_resource type="SpriteFrames" id=3]

animations = [ { "frames":[ ExtResource( 52 ), ExtResource( 53 ) ], "loop":true, "name":"idle", "speed":0.7 }, { "frames":[ ExtResource( 54 ) ], "loop":false, "name":"touched", "speed":1.0 } ]

[sub_resource type="SpriteFrames" id=4]

animations = [ { "frames":[ ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ], "loop":false, "name":"contact", "speed":30.0 } ]

[sub_resource type="SampleLibrary" id=5]

samples/contact = { "db":3.0, "pitch":1.0, "sample":ExtResource( 70 ) }
samples/contact_done2 = { "db":3.0, "pitch":1.0, "sample":ExtResource( 71 ) }

[node name="scene_console" type="Area2D"]

z/z = 2
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
hidden = false

[node name="contact_loading" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "contact_loading"

[node name="base" type="AnimatedSprite" parent="."]

frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="contact" type="AnimatedSprite" parent="."]

visibility/visible = false
frames = SubResource( 4 )
animation = "contact"

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="stream_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="body_enter" from="." to="." method="_on_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_body_exit"]


